syntax = "proto3";

package protos;

option go_package = "pkg/protos";

message KickMsg {
  string userId = 1;
}

message KickAnswer {
  bool kicked = 1;
}
